# aruba-ble-proxy

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
aruba_iot_ble/: __init__.py  active.py  aruba_cli.py  aruba_proto.py  ble_parser.py  compatibility.py  ha_payload.py  models.py  server.py
custom_components/aruba_ble_proxy/: __init__.py  active.py  active_client.py  aruba_cli.py  aruba_proto.py  ble_parser.py  cli.py  config_flow.py  const.py  diagnostics.py  ha_payload.py  manifest.json  models.py  runtime.py  scanner.py  sensor.py  server.py  services.yaml
custom_components/aruba_ble_proxy/aruba_iot_ble/: __init__.py  active.py  aruba_cli.py  aruba_proto.py  ble_parser.py  compatibility.py  ha_payload.py  models.py  server.py
custom_components/aruba_ble_proxy/data/: __init__.py  ha_service_uuids_seed.txt
custom_components/aruba_ble_proxy/proto_generated/: aruba_iot_nb_action_results_pb2.py  aruba_iot_nb_action_results_pb2.pyi  (+16 more)
docs/: ACTIVE_BLE_FEASIBILITY.md  ACTIVE_BLE_TEST_CANDIDATE.md  ARUBA_SETUP.md  FIELD_TEST_REPORT_TEMPLATE.md  HARDWARE_COMPATIBILITY.md  HA_CORE_DEVELOPMENT_PLAN.md  HA_FIELD_TEST_RUNBOOK.md  INSTALL_MANUAL.md  ROADMAP_1.0.md
scripts/: generate-aruba-cli.py  generate-aruba-protobuf.sh  install-ha-manual.sh
tests/: test_active.py  test_active_client.py  test_aruba_cli.py  test_aruba_proto.py  test_ble_parser.py  test_cli.py  test_compatibility.py  test_config_flow_helpers.py  test_diagnostics.py  test_ha_payload.py  test_runtime.py  test_scanner.py  test_sensor.py  test_server.py  test_service_helpers.py
(+24 files in other folders)
